# indexer

./: .dockerignore  .env  .env.dev  .env.prod  .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.consumer  Dockerfile.graphql  Dockerfile.http-consumer  Dockerfile.runner  README.md  clippy.toml  deploy-tasks.sh  diesel.sh  docker-compose.sh  docker-compose.yml  heroku.yml  heroku_accountsdb_consumer_startup.sh  heroku_accountsdb_http_consumer_startup.sh  heroku_graphql_startup.sh  heroku_indexer_startup.sh  heroku_startup.sh  psql.sh  rust-toolchain  rust-toolchain.toml  sample_reindex_config.json  start-developing.sh  test-migration.sh
burn_fix/: Cargo.toml
burn_fix/src/: main.rs
crates/accountsdb-rabbitmq/: Cargo.toml  sample_config.json
crates/accountsdb-rabbitmq/src/: config.rs  lib.rs  metrics.rs  plugin.rs  selectors.rs  sender.rs
crates/b58/: Cargo.toml  main.rs
crates/burn-fix/: Cargo.toml  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/repl/: mod.rs  rmq.rs  rpc.rs
crates/core/: Cargo.toml  diesel.toml
crates/core/migrations/2021-11-18-000208_create_listings/: down.sql  up.sql
crates/core/migrations/2021-11-18-011522_create_metadatas/: down.sql  up.sql
crates/core/migrations/2021-11-18-013149_create_editions/: down.sql  up.sql
crates/core/migrations/2021-11-29-223001_remove_unnecessary_nullable/: down.sql  up.sql
crates/core/migrations/2021-11-30-215636_remove_bytea/: down.sql  up.sql
crates/core/migrations/2021-12-01-190735_add_storefronts/: down.sql  up.sql
crates/core/migrations/2021-12-01-224531_add_listing_metadata_index/: down.sql  up.sql
crates/core/migrations/2021-12-13-203327_add_last_bid_time/: down.sql  up.sql
crates/core/migrations/2021-12-15-001724_rename_listings_last_bid/: down.sql  up.sql
crates/core/migrations/2021-12-21-201423_create_store_denylist/: down.sql  up.sql
crates/core/migrations/2021-12-21-233538_add_storefront_tsvectors/: down.sql  up.sql
crates/core/migrations/2022-01-04-232613_create_bids/: down.sql  up.sql
crates/core/migrations/2022-01-05-225954_add_updated_at_to_storefronts/: down.sql  up.sql
crates/core/migrations/2022-01-05-235934_add_metadata_address_to_editions/: down.sql  up.sql
crates/core/migrations/2022-01-10-200616_create_requested_creators/: down.sql  up.sql
crates/core/migrations/2022-01-12-190500_add_hard_ban_to_denylist/: down.sql  up.sql
crates/core/migrations/2022-01-18-164927_create_token_accounts_table/: down.sql  up.sql
crates/core/migrations/2022-01-21-160714_drop_foreign_keys/: down.sql  up.sql
crates/core/migrations/2022-01-21-232334_add_column_storefronts_banner_url/: down.sql  up.sql
crates/core/migrations/2022-01-22-003337_create_metadata_json/: down.sql  up.sql
crates/core/migrations/2022-01-26-130228_create_auction_house/: up.sql
crates/core/migrations/2022-01-28-015952_add_index_trait_type_value_to_attributes/: down.sql  up.sql
crates/core/migrations/2022-01-28-043619_drop_column_name_from_attributes/: down.sql  up.sql
crates/core/migrations/2022-01-28-220724_add_edition_pda_to_metadatas_table/: down.sql  up.sql
crates/core/migrations/2022-01-29-175500_drop_metadata_address_from_editions/: down.sql  up.sql
crates/core/migrations/2022-01-30-195925_create_storev2_tables/: down.sql  up.sql
crates/core/migrations/2022-02-01-010400_split_listings_table/: down.sql  up.sql
crates/core/migrations/2022-02-02-221458_add_address_to_storefronts/: down.sql  up.sql
crates/core/migrations/2022-02-04-230210_create_auction_house_table/: down.sql  up.sql
crates/core/migrations/2022-02-09-171722_create_token_transfers_table/: down.sql  up.sql
crates/core/migrations/2022-02-12-065030_add_not_null_contraint_to_token_account_amount/: down.sql  up.sql
crates/core/migrations/2022-02-17-015720_create_auction_house_receipts_table/: down.sql  up.sql
crates/core/migrations/2022-02-18-062323_index_for_metadatas_mint_address/: down.sql  up.sql
crates/core/migrations/2022-02-18-234257_drop_table_token_transfers/: down.sql
crates/core/migrations/2022-02-19-112800_add_fee_acc_to_auction_house_table/: down.sql  up.sql
crates/core/migrations/2022-02-19-113449_drop_old_auction_house_table/: down.sql  up.sql
crates/core/migrations/2022-02-22-091436_create_ah_receipts_tables/: down.sql  up.sql
crates/core/migrations/2022-02-24-214839_add_metadata_json_model/: down.sql  up.sql
crates/core/migrations/2022-03-01-162737_create_ah_receipts_tables/: down.sql  (+1 more)
crates/core/src/: assets.rs  error.rs  hash.rs  lib.rs  meilisearch.rs  pubkeys.rs  queue_suffix.rs  thread_pool.rs  util.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: main.rs
crates/dolphin-stats/: Cargo.toml  main.rs
crates/dolphin-stats/src/: lib.rs  main.rs
crates/genostub/: Cargo.toml
crates/genostub/src/: lib.rs  state.rs
crates/geyser-config/: Cargo.toml
crates/geyser-config-migration/: Cargo.toml
crates/geyser-config-migration/src/: lib.rs
crates/geyser-config/src/: main.rs  schema.rs
crates/geyser-consumer/: Cargo.toml
crates/geyser-consumer/src/: main.rs
crates/geyser-rabbitmq/: Cargo.toml  build.rs  sample_config.json
crates/geyser-rabbitmq/src/: config.rs  lib.rs  metrics.rs  plugin.rs  selectors.rs  sender.rs
crates/graph/: Cargo.toml
crates/graph/src/: main.rs  schema.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: main.rs  schema.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: auction.rs  auction_cache.rs  client.rs  db.rs  edition.rs  entry.rs  get_storefronts.rs  legacy_storefronts.rs  lib.rs  main.rs  metadata.rs  reqwest.rs  search_dispatch.rs  store_owner.rs  util.rs
crates/indexer/tests/: cm_config_lines_parsing.rs
crates/moonrank/: Cargo.toml  main.rs
crates/rabbitmq/: Cargo.toml
crates/rabbitmq/src/: account_db.rs  accountsdb.rs  consumer.rs  dl_consumer.rs  geyser.rs  http_indexer.rs  lib.rs  producer.rs  queue_type.rs  search_indexer.rs  serialize.rs  suffix.rs  tag.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: main.rs  rpc.rs  rpc_models.rs
(+671 files in other folders)
