[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-lite]
inherits = "release"
opt-level = 2

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.heroku]
inherits = "release"
# Uncomment below if build performance declines
# opt-level = "z"
# lto = false
