[workspace]
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-lite]
inherits = "release"
opt-level = 2
lto = false

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
# strip = "symbols" # Not supported in the workspace toolchain version
