[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-lite]
inherits = "dev"
incremental = false
opt-level = 0
debug = 1
lto = "none"

[profile.release-lite]
inherits = "release"
opt-level = 2

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
# strip = "symbols" # Not supported in the workspace toolchain version
