[package]
name = "holaplex-indexer-core"
version = "0.1.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Core components for the holaplex-indexer family of crates"
documentation = "https://docs.rs/holaplex-indexer-core"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
assets = [
  "base64",
  "cid",
]
asset-cdn = [
  "assets",
  "md5",
]
db = [
  "diesel",
  "diesel_migrations",
  "diesel_full_text_search",
]
default = ["assets", "asset-cdn", "db", "solana"]
meilisearch = ["meilisearch-sdk", "serde"]
solana = ["solana-program"]

[[bin]]
name = "holaplex-indexer-migrator"
required-features = ["db"]

[dependencies]
# Basic utilities
anyhow = "1.0.45"
chrono = "0.4.19"
clap = { version = "3.0.7", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
meilisearch-sdk = { version = "0.17.0", optional = true }
num_cpus = "1.13.1"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = "1.0.70"
sea-query = { version = "0.24.6", features = ["with-chrono"] }
sea-query-derive = "0.2.0"
sea-query-attr = "0.1.1"
sea-query-driver = "0.1.1"
strum = { version = "0.24.0", features = ["derive"] }
uuid = "0.8.2"

# Fast hash tables
ahash = "0.7.6"
dashmap = "4.0.2"

# ORM
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono", "serde_json", "64-column-tables"], optional = true }
diesel_migrations = { version = "1.4.0", optional = true }
diesel_full_text_search = { version = "1.0.1", git = "https://github.com/diesel-rs/diesel_full_text_search", rev = "886fe85", optional = true }

# Solana
solana-program = { version = "1.9.4", optional = true }

# Asset id
base64 = { version = "0.13.0", optional = true }
cid = { version = "0.7.0", optional = true }
url = "2.2.2"
md5 = { version = "0.7.0", optional = true }
