[package]
name = "holaplex-indexer-dolphin-stats"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "dolphin-stats"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.25"
percent-encoding = "2.2.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.14.1", features = ["net", "rt", "rt-multi-thread", "sync", "time"] }

[dependencies.indexer-core]
package = "holaplex-indexer-core"
path = "../core"
