[package]
name = "holaplex-indexer-geyser-config"
version = "0.1.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Config provider for the holaplex-indexer Geyser plugin"
documentation = "https://docs.rs/holaplex-indexer-geyser-config"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "geyser", "web3", "holaplex", "graphql"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
default = []
server = [
  "actix",
  "actix-web",
  "async-graphql-actix-web",
  "sea-orm",
  "migration",
]

[[bin]]
name = "geyser-config-graphql"
required-features = ["server"]

[dependencies]
actix = { version = "0.13.0", optional = true }
actix-web = { version = "4.0.0-rc.2", optional = true }
async-graphql = "3.0.36"
async-graphql-actix-web = { version = "3.0.30", optional = true }
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.0"

[dependencies.indexer-core]
package = "holaplex-indexer-core"
version = "=0.1.0"
path = "../core"
default-features = false

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
version = "=0.1.0"
path = "../rabbitmq"
default-features = false
features = ["geyser"]

[dependencies.sea-orm]
version = "0.7.1"
features = [
  "sqlx-sqlite",
  "runtime-actix-rustls",
  "macros",
]
optional = true

[dependencies.migration]
package = "geyser-config-migration"
path = "../geyser-config-migration"
optional = true
