[package]
name = "holaplex-indexer-geyser-consumer"
version = "0.1.0"
authors = [
  "Holaplex Engineering <engineering@holaplex.com>",
]
edition = "2021"
description = "Geyser-specific indexer write worker"
documentation = "https://docs.rs/holaplex-indexer-geyser-consumer"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
anchor-lang-v0-20 = { package = "anchor-lang", version = "0.20.1" }
anchor-lang-v0-21 = { package = "anchor-lang", version = "0.21.0" }
anchor-lang-v0-22 = { package = "anchor-lang", version = "0.22.1" }
anchor-lang-v0-24 = { package = "anchor-lang", version = "0.24.2" }
borsh = "0.9.3"
cardinal-paid-claim-approver = { version = "1.4.9", features = ["no-entrypoint"] }
cardinal-time-invalidator = { version = "1.4.9", features = ["no-entrypoint"] }
cardinal-token-manager = { version = "1.4.9", features = ["no-entrypoint"] }
cardinal-use-invalidator = { version = "1.4.9", features = ["no-entrypoint"] }
goki-smart-wallet = { package = "smart-wallet", version = "0.11.1", features = ["no-entrypoint"] }
metaplex = { version = "0.0.1", features = ["no-entrypoint"] }
metaplex-auction = { version = "0.0.1", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
metaplex-token-vault = { version = "0.0.1", features = ["no-entrypoint"] }
mpl-auction-house = { version = "~1.2.4", features = ["no-entrypoint"] }
# hpl-reward-center = { version = "0.2.4", features = ["no-entrypoint"] }
mpl-candy-machine = { version = "~4.0.2", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "~1.2.10", features = ["no-entrypoint"] }
namespaces = { version = "~4.1.35", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-bonding = { package = "spl-token-bonding", version = "3.2.5", features = ["no-entrypoint"] }
tribeca-govern = { package = "govern", version = "0.5.8", features = ["no-entrypoint"] }
tribeca-locked-voter = { package = "locked-voter", version = "0.5.5", features = ["no-entrypoint"] }

[dependencies.mpl-metaplex]
git = "https://github.com/metaplex-foundation/metaplex-program-library.git"
rev = "63f26d6b1c393859c1d93c18dc9379827347229b"
features = ["no-entrypoint"]

[dependencies.graph_program]
git = "https://github.com/holaplex/graph-program.git"
rev = "fed1261e68c524a0389b7b41e00c89623e7c3abc"

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
git = "https://github.com/holaplex/indexer-geyser-plugin"
tag = "v0.8.1"
version = "=0.4.1"
features = [
  "geyser",
  "http-indexer",
  "job-runner",
  "producer",
  "search-indexer",
]

# Workspace dependencies
[dependencies.genostub]
package = "genostub"
version = "=0.1.0"
path = "../genostub"
optional = true

[dependencies.indexer]
package = "holaplex-indexer"
version = "=0.1.0"
path = "../indexer"

[dependencies.indexer-core]
package = "holaplex-indexer-core"
version = "=0.1.0"
path = "../core"
features = ["indexer-rabbitmq"]
