[package]
name = "metaplex-indexer-rabbitmq-geyser"
version = "0.3.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Solana Geyser plugin adapter for metaplex-indexer RabbitMQ transport"
documentation = "https://docs.rs/metaplex-indexer-rabbitmq-geyser"
readme = "../../README.md"
repository = "https://github.com/holaplex/metaplex-indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.52"
bs58 = "0.4.0"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serde_with = "1.11.0"
smol = "1.2.5"
smol-executor-trait = "2.1.0"

solana-geyser-plugin-interface = "1.9.13"
solana-logger = "1.9.4"
solana-program = "1.9.4"
solana-sdk = "1.9.4"
solana-metrics = "1.9.4"
spl-token = "3.2.0"
reqwest = "0.11.6"

[dependencies.indexer-rabbitmq]
package = "metaplex-indexer-rabbitmq"
version = "=0.1.0"
path = "../rabbitmq"
default_features = false
features = ["producer", "geyser"]
