[package]
name = "holaplex-indexer-rabbitmq-geyser"
version = "0.3.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Solana Geyser plugin adapter for holaplex-indexer RabbitMQ transport"
documentation = "https://docs.rs/holaplex-indexer-rabbitmq-geyser"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"
include = [
  "src/config/config-query.graphql",
  "src/config/config-schema.graphql",
]

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.52"
bs58 = "0.4.0"
graphql_client = "0.10.0"
hostname = "0.3.1"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
smol = "1.2.5"
smol-executor-trait = "2.1.0"
url = { version = "2.2.2", features = ["serde"] }

solana-geyser-plugin-interface = "1.9.13"
solana-logger = "1.9.4"
solana-program = "1.9.4"
solana-sdk = "1.9.4"
solana-metrics = "1.9.4"
spl-token = "3.2.0"
reqwest = "0.11.6"

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
version = "=0.1.0"
path = "../rabbitmq"
default-features = false
features = ["producer", "geyser"]

[dependencies.geyser-config]
package = "holaplex-indexer-geyser-config"
version = "=0.1.0"
path = "../geyser-config"
default-features = false

[build-dependencies.geyser-config]
package = "holaplex-indexer-geyser-config"
version = "=0.1.0"
path = "../geyser-config"
default-features = false
