[package]
name = "metaplex-indexer-graphql"
version = "0.1.0"
authors = [
  "Holaplex Engineering <hola@holaplex.com>"
]
edition = "2021"
description = "GraphQL server for providing cached Metaplex data"
documentation = "https://docs.rs/metaplex-indexer-graphql"
readme = "../../README.md"
repository = "https://github.com/holaplex/metaplex-indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "graphql"]
categories = ["cryptocurrency::cryptocurrencies", "web-programming"]

[dependencies]
actix-cors = "0.6.0-beta.8"
actix-web = "4.0.0-beta.21"
async-trait = "0.1"
dataloader = "0.14.0"
reqwest = { version = "0.11.6", features =["json"] }
juniper = "0.15.9"
percent-encoding = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
thiserror = "1.0.30"

[dependencies.indexer-core]
package = "metaplex-indexer-core"
version = "=0.1.0"
path = "../core"
