[package]
name = "holaplex-indexer-graphql"
version = "0.1.0"
authors = [
  "Holaplex Engineering <hola@holaplex.com>"
]
edition = "2021"
description = "GraphQL server for providing cached Metaplex data"
documentation = "https://docs.rs/holaplex-indexer-graphql"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "graphql"]
categories = ["cryptocurrency::cryptocurrencies", "web-programming"]

[dependencies]
actix-cors = "0.6.0-beta.8"
actix-web = "4.0.0-beta.21"
async-trait = "0.1.58"
dataloader = "0.16.0"
derive_more = "0.99.17"
futures-util = "0.3.25"
itertools = "0.10.5"
juniper = "0.15.10"
md5 = "0.7.0"
percent-encoding = "2.2.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
solana-client = "~1.9.28"
thiserror = "1.0.37"
tokio = { version = "1.14.1", default-features = false }

[dependencies.indexer-core]
package = "holaplex-indexer-core"
version = "=0.1.0"
path = "../core"
features = ["meilisearch"]

[dependencies.dolphin-stats]
package = "holaplex-indexer-dolphin-stats"
version = "=0.0.0"
path = "../dolphin-stats"
