[package]
name = "holaplex-indexer"
version = "0.1.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Indexer write worker for caching Metaplex data"
documentation = "https://docs.rs/holaplex-indexer"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
default = []
geyser = [
  "reqwest-client",
  "search-dispatch",
  "serde_json",
  "indexer-rabbitmq/geyser",
  "indexer-rabbitmq/http-indexer",
  "indexer-rabbitmq/producer",
  "indexer-rabbitmq/search-indexer",
]
http = [
  "base64",
  "cid",
  "reqwest-client",
  "search-dispatch",
  "serde_json",
  "indexer-rabbitmq/http-indexer",
  "indexer-rabbitmq/search-indexer",
]
reqwest-client = [
  "reqwest",
]
search = [
  "crossbeam",
  "serde_json",
  "indexer-core/meilisearch",
  "indexer-rabbitmq/search-indexer",
]
search-dispatch = [
  "serde_json",
]

[[bin]]
name = "holaplex-indexer-geyser"
required-features = ["geyser"]

[[bin]]
name = "holaplex-indexer-http"
required-features = ["http"]

[[bin]]
name = "holaplex-indexer-legacy-storefronts"
required-features = ["http"]

[[bin]]
name = "holaplex-indexer-search"
required-features = ["search"]

[dependencies]
async-trait = "0.1.52"
crossbeam = { version = "0.8.1", optional = true }
futures-util = "0.3.21"
hostname = "0.3.1"
serde = { version = "1.0.133", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
tokio = { version = "1.13.0", features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
borsh = "0.9.3"

# Solana
anchor-lang-v0-20 = { package = "anchor-lang", version = "0.20.1" }
anchor-lang-v0-21 = { package = "anchor-lang", version = "0.21.0" }
anchor-lang-v0-22 = { package = "anchor-lang", version = "0.22.1" }
anchor-lang-v0-24 = { package = "anchor-lang", version = "0.24.2" }
bs58 = "0.4.0"
metaplex = { version = "0.0.1", features = ["no-entrypoint"] }
metaplex-auction = { version = "0.0.1", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }
metaplex-token-vault = { version = "0.0.1", features = ["no-entrypoint"] }
mpl-auction-house = { version = "1.1.0", features = ["no-entrypoint"] }
mpl-candy-machine = { version = "~3.1.1", features = ["no-entrypoint"] }
solana-program = "~1.9.5"
spl-token = { version = "~3.2.0", features = ["no-entrypoint"] }
cardinal-token-manager = { version = "^1.0.3", features = ["no-entrypoint"] }
cardinal-time-invalidator = { version = "^1.0.3", features = ["no-entrypoint"] }
cardinal-use-invalidator = { version = "^1.0.3", features = ["no-entrypoint"] }
cardinal-paid-claim-approver = { version = "^1.0.3", features = ["no-entrypoint"] }
namespaces = { version = "0.1.0", features = ["no-entrypoint"] }

# HTTP indexer
base64 = { version = "0.13.0", optional = true }
cid = { version = "0.7.0", optional = true }
reqwest = { version = "0.11.6", features = ["json", "gzip", "brotli", "deflate"], optional = true }
serde_json = { version = "1.0.79", optional = true }

# Tribeca
goki_smart_wallet = { package = "smart-wallet", version = "0.10.1", features = ["no-entrypoint"] }
tribeca-locked-voter = { package = "locked-voter", version = "0.5.5", features = ["no-entrypoint"] }
tribeca-govern = { package = "govern", version = "0.5.5", features = ["no-entrypoint"] }

# Strata
spl-token-bonding = { package = "spl-token-bonding", version = "3.2.5", features = ["no-entrypoint"] }

[dependencies.mpl-metaplex]
git = "https://github.com/metaplex-foundation/metaplex-program-library.git"
rev = "63f26d6b1c393859c1d93c18dc9379827347229b"

[dependencies.graph_program]
git = "https://github.com/holaplex/graph-program.git"
rev = "fed1261e68c524a0389b7b41e00c89623e7c3abc"

# Workspace dependencies
[dependencies.indexer-core]
package = "holaplex-indexer-core"
version = "=0.1.0"
path = "../core"

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
version = "=0.1.0"
path = "../rabbitmq"
